# voxel_game

./: .gitignore  CMakeLists.txt  README.md
Libraries/lib/: glfw3.lib
Libraries/src/: glad.c
assets/: README.md  chunk_shader.frag  chunk_shader.vert  sky_shader.frag  sky_shader.vert  skybox.png~
lib/: CMakeLists.txt
lib/fastnoise/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Main.cpp  app_layer_manager.cpp  block.cpp  camera.cpp  chunk.cpp  game_world.cpp  main.cpp  mouse_handler.cpp  render_texture.cpp  renderer.cpp  texture_attachment.cpp  voxel_game.cpp  window.cpp  worldgen.cpp
src/core/assets/: assets.cpp  shader.cpp  texture.cpp
src/core/game/: VoxelGame.cpp  VoxelGame.h
src/core/include/: app_layer.h  app_layer_manager.h  block.h  camera.h  chunk.h  game_world.h  mouse_handler.h  render_texture.h  renderer.h  texture_attachment.h  voxel_game.h  window.h  worldgen.h
src/core/include/assets/: assets.h  shader.h  texture.h
src/core/include/layer/: game_layer.h  test_layer.h
src/core/layer/: game_layer.cpp  test_layer.cpp
src/core/renderer/: GameRenderer.cpp
src/core/window/: Window.cpp  Window.h
