# Library management

# GlFW Via Git Submodule for window management
add_subdirectory(glfw/)

# GLAD Via pregen for OpenGL Compat
add_subdirectory(glad/)

# GLM Via Git Submodule for mathematic functions
add_subdirectory(glm/)

# Fastnoise library, added in wholesale since its just two files
add_subdirectory(fastnoise/)
